modified:   README.md 	new file:   backend/.env.example 	new file:   backend/API.md 	modified:   backend/Dockerfile 	new file:   backend/data/db.json 	modified:   backend/db.js 	modified:   backend/package-lock.json 	modified:   backend/package.json 	modified:   backend/server.js 	modified:   frontend/src/App.jsx 	new file:   frontend/src/components/PrivateRoute.jsx 	modified:   frontend/src/components/Toast.jsx 	modified:   frontend/src/pages/Register.jsx

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,10 @@ RUN npm install
 
 COPY . .
 
+RUN cp .env.example .env
+
+RUN mkdir -p /app/data && chmod 777 /app/data
+
 EXPOSE 3000
 
 CMD ["npm", "run", "dev"]
