--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "bookmark-backend",
+  "name": "cursor-bookmark-backend",
   "version": "1.0.0",
+  "description": "Cursor Bookmark Backend Service",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "axios": "^1.6.2",
-    "lowdb": "^1.0.0"
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "lowdb": "^1.0.0",
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "axios": "^1.6.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.2"
   }
 }
